[package]
name = "recursum"
version = "0.4.0"
authors = ["Chris Barnes <cbarnes@mrc-lmb.cam.ac.uk>"]
edition = "2018"
description = "Quickly hash all files in a directory tree"
license = "MIT"
repository = "https://github.com/clbarnes/recursum"
readme = "README.md"

[dependencies]
meowhash = "0.3.0"
tokio = { version = "0.2", features = ["rt-threaded", "sync", "stream", "io-std", "io-util"] }
structopt = "0.3"
digest = "0.9.0"
jwalk = "0.5.1"
hex = "0.4.2"
num_cpus = "1.13.0"
indicatif = "0.15.0"

[dev-dependencies]
cargo-release = "0.13.5"

[package.metadata.release]
disable-publish = false
no-dev-version = true
