[package]
name = "recursum"
version = "0.4.0"
authors = ["Chris Barnes <cbarnes@mrc-lmb.cam.ac.uk>"]
edition = "2018"
description = "Quickly hash all files in a directory tree"
license = "MIT"
repository = "https://github.com/clbarnes/recursum"
readme = "README.md"

[features]
default = ["meow", "blake2", "blake3", "md5", "sha1", "sha2"]
meow = ["meowhash"]
md5 = ["md-5"]

[dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "sync", "stream", "io-std", "io-util"] }
structopt = "0.3"
digest = "0.9.0"
jwalk = "0.5.1"
hex = "0.4.2"
num_cpus = "1.13.0"
indicatif = "0.15.0"
meowhash = { version = "0.3.0", optional = true }
blake2 = { version = "0.9.0", optional = true }
blake3 = { version = "0.3.6", optional = true }
md-5 = { version = "0.7.0", optional = true }
sha1 = { version = "0.6.0", optional = true }
sha2 = { version = "0.9.1", optional = true }

[dev-dependencies]
cargo-release = "0.13.5"


[package.metadata.release]
disable-publish = false
no-dev-version = true
